--- a/package.json
+++ b/package.json
@@ -6,16 +6,19 @@
     "antd": "^3.6.3",
     "axios": "^0.18.0",
     "react": "^16.4.1",
+    "react-app-rewire-hot-loader": "^1.0.1",
+    "react-app-rewired": "^1.5.2",
     "react-dom": "^16.4.1",
-    "react-scripts": "1.1.4",
+    "react-hot-loader": "^4.3.3",
     "react-redux": "^5.0.7",
+    "react-scripts": "1.1.4",
     "redux": "^4.0.0",
     "redux-thunk": "^2.3.0"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "start": "react-app-rewired start",
+    "build": "react-app-rewired build",
+    "test": "react-app-rewired test --env=jsdom",
+    "eject": "react-app-rewired eject"
   }
 }
