--- a/package.json
+++ b/package.json
@@ -2,6 +2,12 @@
   "name": "cryptoinfo",
   "version": "0.1.0",
   "private": true,
+  "scripts": {
+    "start": "react-app-rewired start",
+    "build": "react-app-rewired build",
+    "test": "react-app-rewired test --env=jsdom",
+    "eject": "react-app-rewired eject"
+  },
   "dependencies": {
     "antd": "^3.6.3",
     "axios": "^0.18.0",
@@ -12,13 +18,8 @@
     "react-hot-loader": "^4.3.3",
     "react-redux": "^5.0.7",
     "react-scripts": "1.1.4",
+    "react-svg": "^4.0.17",
     "redux": "^4.0.0",
     "redux-thunk": "^2.3.0"
-  },
-  "scripts": {
-    "start": "react-app-rewired start",
-    "build": "react-app-rewired build",
-    "test": "react-app-rewired test --env=jsdom",
-    "eject": "react-app-rewired eject"
   }
 }
