--- a/package.json
+++ b/package.json
@@ -21,5 +21,10 @@
     "react-svg": "^4.0.17",
     "redux": "^4.0.0",
     "redux-thunk": "^2.3.0"
+  },
+  "devDependencies": {
+    "babel-plugin-import": "^1.8.0",
+    "less": "^2.7.2",
+    "react-app-rewire-less": "^2.1.2"
   }
 }
