--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-app-rewired": "^1.5.2",
     "react-dom": "^16.4.1",
     "react-hot-loader": "^4.3.3",
+    "react-particles-js": "^2.2.0",
     "react-redux": "^5.0.7",
     "react-scripts": "1.1.4",
     "react-svg": "^4.0.17",
